--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: Ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/Checkout@V4
+        uses: actions/Checkout@v4
       - name: Build
         run: |
           docker build .
