--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       -  main
+  pull_request:
+    types: [synchronize]
+    branches: 
+      - main    
 jobs:
   Build:
     runs-on: Ubuntu-latest
