--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build
         run: |
-          docker build -t ${{ github.repository }}:latest --file Docker/Dockerfile .
+          cd Docker
+          docker build -t ${{ github.repository }}:latest .
       - name: Login Docker Hub
         uses: docker/login-action@v3
         with:
