--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,7 @@
 name: deploy
 on:
-  push:
-    branches:
-      - release
+  release:
+    types: [published]
 jobs:
   build:
     environment: production
