Enable SSL connection to RDS
Edit host files to add remote host name to 127.0.0.1
Add Php Config for localhost and Cert

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@
 # RDS_TYPE    : RDS Type (Instance or Cluster)
 ############################################
 AWS_PROFILE=
+AWS_REGION=
 RDS_TYPE=
 PMA_HOSTS=
 PMA_VERBOSES=
