--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -2,9 +2,9 @@ FROM ubuntu:20.04 as sessionmanagerplugin
 #ADD https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb .
 RUN apt update && apt install -y curl unzip
 RUN if [ "$BUILDPLATFORM" = "linux/arm64"]; then \
-    curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_arm64/session-manager-plugin.deb" -o "session-manager-plugin.deb" \
+    curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_arm64/session-manager-plugin.deb" -o "session-manager-plugin.deb"; \
     else \
-    curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb" -o "session-manager-plugin.deb" \
+    curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb" -o "session-manager-plugin.deb"; \
     fi
 RUN dpkg -i "session-manager-plugin.deb"
 FROM phpmyadmin:fpm-alpine
