--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Build
         run: |
           cd Docker
-          docker build -t ${{ github.repository }}:latest .
+          docker build --platform linux/amd64,linux/arm64 -t ${{ github.repository }}:latest .
       
       
   
