--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/Checkout@v4 #version in small letter
-      - name: Build
-        run: |
-          cd Docker
-          docker build --platform linux/amd64,linux/arm64 -t ${{ github.repository }}:latest .
-      
-      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: "{{defaultContext}}:Docker"
+          platforms: linux/amd64,linux/arm64
+          push: false
+          tags: user/app:latest
   
